SOTA version beta is done, yay!

--- a/0_frontmatter/acknowledgement.tex
+++ b/0_frontmatter/acknowledgement.tex
@@ -7,7 +7,7 @@
 %%
 %%HAY QUE AGRADECER A LA UPM POR LA BECA Y AL GRUPO DE FRANK, SOBRETODO A PETER
 %%A SARA Y A LA GENTE DE ÁMSTERDAM
-%A Sara, gracias por tu generosidad, por haber sido 'casa' lejos de casa, por tu compañía y por ser la maravillosa persona que eres. 
+%A Sara, gracias por tu generosidad, por haber sido 'casa' lejos de casa, por haber
 
 
 
