--- a/Thesis.tex
+++ b/Thesis.tex
@@ -131,7 +131,8 @@
 \usepackage{amsthm}
 \usepackage{latexsym}
 \usepackage{pifont}
-\usepackage{subfig}
+%\usepackage{subfig}
+\usepackage{subfigure}
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{adjustbox} 
